# apitele

./: README.md  pyproject.toml  version.py
apitele/: __init__.py  api.py  client.py  constants.py  types.py  update_manager.py
docs/source/: client.rst  conf.py  exceptions.rst  index.rst  installation.rst  next_function.rst  types.rst
