[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apitele"
version = "1.0.7"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "geko1"}
]
dependencies = [
    "aiohttp>=3.9.1",
    "certifi>=2023.11.17",
    "ujson>=5.9.0"
]

[project.urls]
Repository = "https://github.com/unixtux/apitele"

[tool.setuptools]
packages = ["apitele"]
